<resources>
    <string name="app_name">Cherry</string>
    <string name="diary_list_title">日记列表</string>
    <string name="diary_editor_title">编辑日记</string>
    <string name="diary_detail_title">日记详情</string>
    <string name="diary_settings_title">设置</string>
    <string name="diary_add_entry">添加新日记</string>
    <string name="diary_title">标题</string>
    <string name="diary_content">内容</string>
    <string name="diary_pick_date">选择日期</string>
    <string name="action_save">保存</string>
    <string name="action_cancel">取消</string>
    <string name="action_delete">删除</string>
    <string name="action_share">分享</string>
    <string name="action_edit">编辑</string>
    <string name="diary_title_placeholder">请输入标题...</string>
    <string name="diary_date_placeholder">选择一个日期</string>
    <string name="diary_content_placeholder">记录今天发生的事...</string>
    <string name="setting_dark_mode">深色模式</string>
    <string name="setting_export">导出日记</string>
    <string name="setting_import">导入日记</string>
    <string name="open_diary">打开日记</string>
    <string name="generate_test_error">Generate Test Error</string>
</resources>