<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/app_name"
        app:layout_scrollFlags="scroll|enterAlways" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_diary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:defaultNavHost="true"
        app:navGraph="@navigation/diary_nav_graph"
        android:name="androidx.navigation.fragment.NavHostFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/btnOpenDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_diary"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <Button
            android:id="@+id/btnTestError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_test_error" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
